Edits post IE review

--- a/_include/hu/aix-enable-san-boot.adoc
+++ b/_include/hu/aix-enable-san-boot.adoc
@@ -7,19 +7,9 @@ You can configure your host to use SAN booting to simplify deployment and improv
 --
 SAN booting is the process of setting up a SAN-attached disk (a LUN) as a boot device for an AIX/PowerVM host host. You can set up a SAN boot LUN to work in a AIX Multipath I/O (MPIO) environment that is using the FC protocol and running AIX Host Utilities with either the FC or FCoE protocol. The method you use to create a SAN boot LUN and install a new OS image in an AIX MPIO environment depends on the protocol that you are using. 
 
-.Before you begin
-* Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your AIX OS, protocol, and ONTAP version support SAN booting.
-* Review the best practices for setting up a SAN boot in the vendor documentation.
-
 .Steps
-. Create a SAN boot LUN and map it to the host.
-+
-See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^].
-. Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
-+
-For information on how to enable the HBA BIOS, see your vendor-specific documentation.
-
-. Verify that the configuration was successful by rebooting the host and verifying that the OS is up and running.
+. Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your AIX OS, protocol, and ONTAP version support SAN booting.
+. Follow the best practices for setting up a SAN boot in the vendor documentation.
 --
 
 .Local boot
