--- a/hu-aix-san-toolkit.adoc
+++ b/hu-aix-san-toolkit.adoc
@@ -13,7 +13,9 @@ summary: The AIX Host Utilities host software provides a command line toolkit on
 :imagesdir: ./media/
 
 [.lead]
-AIX Host Utilities is a NetApp host software that provides a command line toolkit on your IBM AIX host. The SAN toolkit is installed when you install the NetApp Host Utilities package. The toolkit provides the `sanlun` utility, which helps you manage ONTAP LUNs and host bus adapters (HBAs). The `sanlun` command returns information about ONTAP LUNs mapped to your host, multipathing, and information necessary to create initiator groups. The following example output shows the ONTAP LUN information returned for the `sanlun lun show` command:
+AIX Host Utilities is a NetApp host software that provides a command line toolkit on your IBM AIX host. The SAN toolkit is installed when you install the NetApp Host Utilities package. The toolkit provides the `sanlun` utility, which helps you manage ONTAP LUNs and host bus adapters (HBAs). The `sanlun` command returns information about ONTAP LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
+
+The following example output shows the ONTAP LUN information returned for the `sanlun lun show` command:
 
 ----
 controller(7mode)/ device host lun
