--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -18,17 +18,14 @@ include::_include/hu/aix-install-hu-introduction.adoc[]
 AIX Host Utilities 6.1 support the following transport protocols and AIX environments.
 
 * FC, FCoE, and iSCSI
-* AIX Microsoft Multipath I/O (MPIO) (Native OS)
+* AIX Microsoft Multipath I/O (MPIO)
 * PowerVM 
 +
 For more information about PowerVM, see the IBM PowerVM Live Partition Mobility Red Book.
 
 include::_include/hu/aix-install-hu-about-this-task.adoc[]
 
-.Before you begin
 
-* Use the https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that all components in your iSCSI, FC, or FCoE configuration are supported.
-* Enable dynamic tracking for all FC and FCoE initiators.
 
 .Steps
 
