--- a/hu-solaris-release-notes.adoc
+++ b/hu-solaris-release-notes.adoc
@@ -31,8 +31,9 @@ You should be aware of the following known problems and limitations that might i
 +
 [cols=4,options="header"cols="15,15,15,55"]
 |===
-|Solaris version |Bug ID	|Title	|Description
-|11.4 |link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1385189[1385189^]
+|Bug ID	|Affects solaris version |Title	|Description
+|link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/BURT/1385189[1385189^]
+|11.4 
 |Solaris 11.4 FC driver binding changes required in HUK 6.2	|Solaris 11.4 and HUK recommendations:
 FC driver binding is changed from `ssd(4D)` to `sd(4D)`. Move configuration that you have in `ssd.conf` to `sd.conf` as mentioned in Oracle (Doc ID 2595926.1). The behavior varies across newly installed Solaris 11.4 systems and systems upgraded from 11.3 or lower versions.
 |===
