--- a/hu-aix-80.adoc
+++ b/hu-aix-80.adoc
@@ -15,7 +15,7 @@ summary: The AIX Host Utilities assists you to manage ONTAP storage attached to 
 [.lead]
 include::_include/hu/aix-install-hu-introduction.adoc[] 
 
-AIX Host Utilities 8.0 supports the following transport protocols and AIX environments.
+AIX Host Utilities 8.0 supports the following transport protocols and AIX environments:
 
 * FC, FCoE, and iSCSI 
 * AIX Multipath I/O (MPIO)
