--- a/hu_aix_61.adoc
+++ b/hu_aix_61.adoc
@@ -15,7 +15,7 @@ summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTA
 [.lead]
 include::_include/hu/aix-install-hu-introduction.adoc[] 
 
-AIX Host Utilities 6.1 support the following transport protocols and AIX environments.
+AIX Host Utilities 6.1 support the following transport protocols and AIX environments:
 
 * FC, FCoE, and iSCSI
 * AIX Microsoft Multipath I/O (MPIO)
