--- a/hu_hpux_11iv3.adoc
+++ b/hu_hpux_11iv3.adoc
@@ -47,14 +47,17 @@ link:hu_hpux_60.html[Install HP-UX Host Utilities 6.0]
 
 == Step 3: Confirm the multipath configuration for your host
 
-Use multipathing with HP-UX 11i v3 to manage ONTAP LUNs.
+Use multipathing with HP-UX 11i v3 to manage ONTAP LUNs. Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. To ensure that multipathing is configured correctly for your host, verify that multipathing is enabled and that you have the NetApp recommended settings configured for your ONTAP LUNs. 
 
-Multipathing allows you to configure multiple network paths between the host and storage system. If one path fails, traffic continues on the remaining paths. For a host to have multiple paths to a LUN, multipathing must be enabled. The HP-UX Host Utilities support different multipathing solutions based on your configuration. The following is for the Native Multipathing solution.
+.About this task
+The HP-UX Host Utilities support Native Microsoft Multipath I/O (MPIO) and Veritas Dynamic Multipathing. The following steps are for the Native MPIO solution.
 
-To ensure that multipathing is configured correctly for your host, verify that the /etc/multipath.conf file is defined and that you have the NetApp recommended settings configured for your ONTAP LUNs.
+.Steps
+
+. Enable multipathing:
 
 
-. The following shows the recommended settings for HPUX 11i v3 and ONTAP LUNs. NetApp uses the default settings for HP-UX.
+. The following table shows the recommended default settings for HPUX 11i v3 and ONTAP LUNs.
 
 .Show parameter settings
 [%collapsible]
@@ -73,31 +76,20 @@ To ensure that multipathing is configured correctly for your host, verify that t
 |===
 ====
 
-. include::_include/hu/reuse_hu_non_asa_configuration.adoc[]
-
+. Verify the parameter settings and path status for your ONTAP LUNs:
++
+[source,cli]
 ----
-# sanlun lun show -p vs39:/vol/vol24_3_0/lun24_0
-                    ONTAP Path: vs39:/vol/vol24_3_0/lun24_0
-                           LUN: 37
-                      LUN Size: 15g
-                   Host Device: /dev/rdisk/disk942
-                          Mode: C
-              Multipath Policy: A/A
-            Multipath Provider: Native
-------- ---------- ------ ------- ---------- ---------- --------------
-host    vserver     /dev/dsk                            HP A/A
-path    path        filename          host    vserver   path failover
-state   type        or hardware path adapter    LIF     priority
-------- ---------- ------ ------- ---------- ---------- --------------
-up       primary    /dev/dsk/c39t4d5   fcd0    hpux_3     0
-up       primary    /dev/dsk/c41t4d5   fcd1    hpux_4     0
-up       secondary  /dev/dsk/c40t4d5   fcd0    hpux_3     1
-up       secondary  /dev/dsk/c42t4d5   fcd1    hpux_4     1
+sanlun lun show
 ----
-
-include::_include/hu/reuse_hu_asa_configuration.adoc[]
-
-NOTE: All SAN Array (ASA) configurations are supported beginning in ONTAP 9.8 for HP-UX 11iv3
++
+The default multipath parameters support ASA, AFF, and FAS configurations. The following example outputs show the correct parameter settings and path status for ONTAP LUNs in an ASA, AFF, or FAS configuration.
++
+[role="tabbed-block"]
+====
+.ASA configuration
+--
+An ASA configuration optimizes all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time.
 
 ----
 # sanlun lun show -p vs39:/vol/hpux_vol_1_1/hpux_lun
@@ -118,6 +110,35 @@ up       primary    /dev/dsk/c6t0d2      fcd0    246_1c_hp
 up       primary    /dev/dsk/c10t0d2     fcd1    246_1d_hp
 up       primary    /dev/dsk/c8t0d2      fcd1    248_1d_hp
 ----
+--
+
+.AFF or FAS configuration
+--
+An AFF or FAS configuration should have two groups of paths with higher and lower priorities. Higher priority Active/Optimized paths are served by the controller where the aggregate is located. Lower priority paths are active but non-optimized because they are served by a different controller. Non-optimized paths are only used when optimized paths aren’t available.
+
+The following example displays the output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths:
+
+----
+# sanlun lun show -p vs39:/vol/vol24_3_0/lun24_0
+                    ONTAP Path: vs39:/vol/vol24_3_0/lun24_0
+                           LUN: 37
+                      LUN Size: 15g
+                   Host Device: /dev/rdisk/disk942
+                          Mode: C
+              Multipath Policy: A/A
+            Multipath Provider: Native
+------- ---------- ------ ------- ---------- ---------- --------------
+host    vserver     /dev/dsk                            HP A/A
+path    path        filename          host    vserver   path failover
+state   type        or hardware path adapter    LIF     priority
+------- ---------- ------ ------- ---------- ---------- --------------
+up       primary    /dev/dsk/c39t4d5   fcd0    hpux_3     0
+up       primary    /dev/dsk/c41t4d5   fcd1    hpux_4     0
+up       secondary  /dev/dsk/c40t4d5   fcd0    hpux_3     1
+up       secondary  /dev/dsk/c42t4d5   fcd1    hpux_4     1
+----
+--
+====
 
 == Step 4: Review the known issues
 
