--- a/nvme_sles15_sp6.adoc
+++ b/nvme_sles15_sp6.adoc
@@ -907,13 +907,7 @@ DHHC-
 --
 =====
 
-== Configure Transport Layer Security
-
-Transport Layer Security (TLS) provides secure end-to-end encryption for NVMe connections between NVMe-oF hosts and an ONTAP array. Beginning with ONTAP 9.16.1, you can configure TLS 1.3 using the CLI and a configured pre-shared key (PSK). 
-
-.About this task
-You perform the steps in this procedure on the SUSE Linux Enterprise Server 15 SP6 host, except where it specifies that you perform a step on the ONTAP controller.
-
+include::_include/nvme/linux-configure-tls.adoc[]
 
 .Steps
 . Check that you have the following ktls-utils, openssl, and libopenssl packages installed on the host: 
@@ -1008,11 +1002,6 @@ NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
 . On the ONTAP array, add the TLS PSK to the ONTAP subsystem:
 +
 ----
--host-nqn nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f
-----
-+
-.Example output
-----
 vserver nvme subsystem host add -vserver sles15_tls -subsystem sles15 -host-nqn nqn.2014-08.org.nvmexpress:uuid:e58eca24-faff-11ea-8fee-3a68dd3b5c5f -tls-configured-psk NVMeTLSkey-1:01:dNcby017axByCko8GivzOO9zGlgHDXJCN6KLzvYoA+NpT1uD:
 ----
 . On the SUSE Linux Enterprise Server host, insert the TLS PSK into the host kernel keyring:
@@ -1100,4 +1089,5 @@ Authentication Diffie-Hellman Group: -
 
 There are no known issues for the SUSE Linux Enterprise Server 15 SP6 with ONTAP release. 
 
+// 2025 JUN 9, ONTAPDOC-3028
 // 2024 NOV 5, ONTAPDOC-2390
