--- a/hu-wuhu-release-notes.adoc
+++ b/hu-wuhu-release-notes.adoc
@@ -13,7 +13,7 @@ summary: Release Notes for Windows Host Utilities
 :imagesdir: ./media/
 
 [.lead]
-The release notes describe new features and enhancements, issues fixed in the current release, known issues and limitations, and important cautions related to configuring and managing your specific Windows host with your ONTAP storage system.
+The release notes describe new features, enhancements, known issues, limitations, and important cautions related to configuring and managing your specific Windows host with your ONTAP storage system.
 
 For specific information about the operating system versions and updates that the Host Utilities support, see the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^].
 
@@ -28,12 +28,12 @@ Windows Host Utilities 7.2 includes support for NVMe/FC driver parameter setting
 
 == What's new in Windows Host Utilities 7.1
 
-Windows Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later, and enhanced iSCSI timeouts for faster failover.
+Windows Host Utilities 7.1 includes support for E-Series storage systems, ONTAP 9 software, and enhanced iSCSI timeouts for faster failover.
 
 
-== Known problems and limitations
+== Known issues and limitations
 
-You should be aware of the following known problems and limitations that might impact performance on your specific host. A few unexpected and potentially undesired behaviors, and workarounds to avoid these behaviors, have been identified in the Windows Host Utilities 7.1 release. 
+You should be aware of the following known issues and limitations that might impact performance on your specific host. A few unexpected and potentially undesired behaviors, and workarounds to avoid these behaviors, have been identified in the Windows Host Utilities 7.1 release. 
 
 [cols=34,options="header", cols= "30, 15, 30, 30"]
 |===
