--- a/hu-wuhu-release-notes.adoc
+++ b/hu-wuhu-release-notes.adoc
@@ -33,7 +33,7 @@ Windows Host Utilities 7.1 includes support for E-Series storage systems, ONTAP 
 
 == Known issues and limitations
 
-You should be aware of the following known issues and limitations that might impact performance on your specific host. A few unexpected and potentially undesired behaviors, and workarounds to avoid these behaviors, have been identified in the Windows Host Utilities 7.1 release. 
+You should be aware of the following known issues and limitations that might impact performance on your specific host. 
 
 [cols=34,options="header", cols= "30, 15, 30, 30"]
 |===
