--- a/hu-ol-810.adoc
+++ b/hu-ol-810.adoc
@@ -16,11 +16,7 @@ You can use the ONTAP SAN host configuration settings to configure Oracle Linux 
 
 == Install the Linux Host Utilities
 
-NetApp strongly recommends installing the Linux Host Utilities to support ONTAP LUN management and assist technical support with gathering configuration data.
-
-link:hu-luhu-80.html[Install Linux Host Utilities 8.0]. 
-
-NOTE: Installing the Linux Host Utilities doesn't change any host timeout settings on your Linux host.
+include::_include/hu/reuse_hu_installing_luhu_without32.adoc[]
 
 == SAN toolkit
 
