--- a/hu_luhu_71.adoc
+++ b/hu_luhu_71.adoc
@@ -4,7 +4,7 @@ permalink: hu_luhu_71.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 ---
-= Install Linux Host Utilities 7.1
+= Install Linux Host Utilities 7.1 for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -13,9 +13,9 @@ summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-The Linux Host Utilities assists you to manage ONTAP storage attached to a Linux host. NetApp strongly recommends installing the Linux Host Utilities, but it is not mandatory. The utilities do not change any settings on your Linux host. The utilities improve management and assist NetApp customer support in gathering information about your configuration. 
+include::_include/hu/install-linux-hu-introduction.adoc[]
 
-The following Linux distributions are supported:
+Linux Host Utilities 7.1 supports the following distribution types:
 
 *	Red Hat Enterprise Linux
 *	SUSE Linux Enterprise Server
@@ -23,30 +23,27 @@ The following Linux distributions are supported:
 *	Oracle VM
 *	Citrix XenServer
 
+NOTE: The Linux Host Utilities software doesn't support NVMe over Fibre Channel (NVMe/FC) and NVMe over TCP (NVMe/TCP) host protocols.
+
+.About this task
+
+When you install the Linux Host Utilities, it doesn't change any settings on your Linux host.
+
 .Before you begin
-
-The NetApp Linux Host Utilities software package is available on the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] in a 32-bit or 64-bit .rpm file. 
-
-* For reliable operation, you must verify that your entire iSCSI, FC, or FCoE configuration is supported.
+* For reliable operation, use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your iSCSI, FC, or FCoE configuration is supported.
+* Install the host bus adapter (HBA) management packages available on the vendor support site.
 +
-You can use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify your configuration.
-
-* You must install the host bus adapter (HBA) management packages available on the vendor support site.
+The management software enables the `sanlun` commands to gather information about the FC HBAs, such as their WWPNs. For the `sanlun fcp show adapter` command to work, verify that the following packages are correctly installed:
 +
-The management software enables the SAN Toolkit commands to gather information about the FC HBAs, such as their WWPNs. For the `sanlun fcp show adapter` command to work, verify that the following packages are correctly installed:
-
 ** Marvell QLogic HBA – QConvergeConsole CLI
 ** Broadcom Emulex HBA - OneCommand Manager core application CLI
 ** Marvell Brocade HBA – Brocade Command Utility CLI
 
-* RPM Packages "libhbaapi" and "libhbalinux" available for each Linux distribution should be installed on the host OS.
-
-[NOTE]
-The Linux Host Utilities software doesn't support NVMe over Fibre Channel (NVMe/FC) and NVMe over TCP (NVMe/TCP) host protocols.
+* Install the RPM "libhbaapi" and "libhbalinux" packages available for each Linux distribution on the Linux host OS.
 
 .Steps
 
-. If you have a version of Linux Host Utilities currently installed, use the following command to remove it:
+. If you have a version of Linux Host Utilities currently installed, remove it:
 +
 [source, cli]
 ----
@@ -57,7 +54,7 @@ For earlier versions of Linux Host Utilities, go to the directory where the host
 
 . Download the 32-bit or 64-bit Linux Host Utilities software package from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/7.1/downloads[NetApp Support Site^] to your host.
 
-. Go to the directory to which you downloaded the software package and use the following command to install it:
+. Go to the directory to which you downloaded the software package and install it:
 +
 [source, cli]
 ----
@@ -82,19 +79,4 @@ sanlun version
 sanlun version 7.1.386.1644
 ----
 
-== Recommended driver settings with Linux kernel
-
-When you configure an FC environment that uses native inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. 
-
-== SAN Toolkit
-
-Linux Host Utilities is a NetApp host software that provides a command line toolkit on your Linux host.
-
-include::_include/hu/reuse_hu_san_toolkit.adoc[]
-
-[NOTE] 
-====
-* This toolkit is common across all configurations and protocols of the Host Utilities. As a result, some of its contents apply to one configuration, but not another. Having unused components does not affect your system performance. 
-
-* The SAN Toolkit is not supported on Citrix XenServer, Oracle VM, and Red Hat Enterprise Virtualization Hypervisor.
-====
+include::_include/hu/linux-install-hu-whats-next.adoc[]
