--- a/hu-luhu-80.adoc
+++ b/hu-luhu-80.adoc
@@ -30,11 +30,9 @@ When you install the Linux Host Utilities, it doesn't change any settings on you
 
 .Before you begin
 * For reliable operation, use the link:https://imt.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your iSCSI, FC, or FCoE configuration is supported.
-* Install the host bus adapter (HBA) management packages available on the vendor support site.
+* Install the host bus adapter (HBA) management packages available on the vendor support site. The management software enables the `sanlun` commands to gather information about the FC HBAs, such as their WWPNs. 
 +
-The management software enables the `sanlun` commands to gather information about the FC HBAs, such as their WWPNs. 
-
-* Verify that the following packages are correctly installed. These packages are required to support the `sanlun fcp show adapter` command:
+Refer to the vendor documentation to verify that the following packages are correctly installed. These packages are required to support the `sanlun fcp show adapter` command:
 +
 ** Marvell QLogic HBA – QConvergeConsole CLI
 ** Broadcom Emulex HBA - OneCommand Manager core application CLI
