--- a/_include/hu/use-linux-host-utilities.adoc
+++ b/_include/hu/use-linux-host-utilities.adoc
@@ -1,1 +1,1 @@
-* link:hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool]. 
+* link:hu-luhu-command-reference.html[Learn about using the Linux Host Utilities tool]. 
