--- a/hu-luhu-sanlun-utility.adoc
+++ b/hu-luhu-sanlun-utility.adoc
@@ -4,7 +4,7 @@ permalink: hu-luhu-sanlun-utility.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Linux Host Utilities 7.1 with ONTAP
 ---
-= Learn about the Linux "sanlun" utility for ONTAP storage
+= Learn about the "sanlun" utility for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -51,4 +51,4 @@ For Linux Host Utilities 7.1, the "sanlun" utility isn't supported for Citrix Xe
 
 == What's next?
 
-link:hu_luhu_71_cmd.html[Learn about using the Linux Host Utilities tool].
+link:hu-luhu-command-reference.html[Learn about using the Linux Host Utilities tool].
