--- a/hu-wuhu-80.adoc
+++ b/hu-wuhu-80.adoc
@@ -52,51 +52,9 @@ Verify that your host and storage system configuration are supported before you 
 For example, the link:https://docs.netapp.com/us-en/ontap-sanhost/hu-windows-2025.html[Configure Windows Server 2025 for ONTAP storage] documentation provides the instructions for installing Windows hotfixes for Windows Server 2025.
 . link:https://docs.netapp.com/us-en/ontap/san-admin/verify-license-fc-iscsi-task.html[Add the iSCSI or FCP license^].
 
-. Start the target service.
+include::_include/windows/windows-install-chunk-b.adoc[]
 
-. Verify your cabling.
-+
-Refer to the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] for detailed cabling and configuration information.
-
-== Step 2: Configure FC HBAs and switches
-
-Install and configure one or more supported FC host bus adapters (HBAs) for FC connections to the storage system.
-
-The Windows Host Utilities installer sets the required FC HBA settings.
-
-[CAUTION]
-You should only allow the Windows Host Utilities installer to set the HBA parameters. This ensures that the Windows host can correctly handle the storage system behaviors for ONTAP platforms. 
-
-.Steps
-
-. Install one or more supported FC HBAs according to the instructions provided by the HBA vendor.
-. Obtain the supported HBA drivers and management utilities and install them according to the instructions provided by the HBA vendor.
-. https://docs.netapp.com/us-en/ontap/san-management/index.html[Connect the HBAs to your FC switches or directly to the storage system^].
-
-. https://docs.netapp.com/us-en/ontap/san-config/fibre-channel-fcoe-zoning-concept.html[Create zones on the FC switch according to your FC switch documentation^].
-
-. For ONTAP, zone the switch by the WWPN. Be sure to use the WWPN of the logical interfaces (LIFs) and not the WWPN of the physical ports on the storage controllers. Refer to the https://docs.netapp.com/us-en/ontap/san-config/index.html[SAN configuration reference^] for more information.
-
-== Step 3: Install the Windows Host Utilities
-
-The installation program installs the Windows Host Utilities package and sets the Windows registry and HBA settings.
-
-.About this task
-Optionally, you can include multipathing support when you install the Windows Host Utilities software package. The installer prompts you for the following options:
-
-* Choose `MPIO` if you have more than one path from the Windows host or virtual machine to the storage system. 
-+
-The MPIO feature is enabled automatically when you select MPIO support.
-* Choose `no MPIO` only if you're using a single path to the storage system.
-
-You can also choose multipathing support using a Windows command line prompt.
-
-For Hyper-V guests, raw (pass-through) disks don't appear in the guest OS if you choose multipathing support. You can either use raw disks, or you can use MPIO, but you can't use both in the guest OS.
-
-CAUTION: If you don't install the MPIO software, the Windows OS might see each path as a separate disk. This can lead to data corruption. 
-
-NOTE: Windows XP or Windows Vista running in a Hyper-V virtual machine doesn't support MPIO.
-
+include::_include/windows/windows-install-host-utilities.adoc[]
 .Steps
 
 You can install the Host Utilities interactively or by using the command line. The new Host Utilities installation package must be in a path that is accessible to the Windows host.
