--- a/hu-solaris-san-toolkit.adoc
+++ b/hu-solaris-san-toolkit.adoc
@@ -4,7 +4,7 @@ permalink: hu-solaris-san-toolkit.html
 keywords: host utilities, unified, oracle, linux, 7.1, netapp, ontap
 summary: Describes how to use the Solaris Host Utilities 8.0 with ONTAP
 ---
-= Learn about the Solaris SAN Toolkit
+= Learn about the SAN Toolkit for ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
