--- a/_include/hu/solaris-install-whats-next.adoc
+++ b/_include/hu/solaris-install-whats-next.adoc
@@ -1,3 +1,3 @@
 == What's next?
 
-link:hu-solaris-san-toolkit.html[Learn about the Solaris SAN Toolkit].
+link:hu-solaris-san-toolkit.html[Learn about the SAN Toolkit].
