--- a/_include/hu/linux-enable-san-boot.adoc
+++ b/_include/hu/linux-enable-san-boot.adoc
@@ -7,9 +7,8 @@ Use the link:https://mysupport.netapp.com/matrix/#welcome[Interoperability Matri
 
 .Steps
 
-. Create a SAN boot LUN and map it to the host.
-+
-See https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Provision SAN storage^].
+. link:https://docs.netapp.com/us-en/ontap/san-admin/provision-storage.html[Create a SAN boot LUN and map it to the host^].
+
 . Enable SAN booting in the server BIOS for the ports to which the SAN boot LUN is mapped.
 +
 For information on how to enable the HBA BIOS, see your vendor-specific documentation.
